plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.2'
    id 'io.spring.dependency-management' version '1.1.2'
    id 'application'
}

group = 'org.squidmin.java.spring.gradle.bigquery'
version = '0.0.1-SNAPSHOT'
println "Build Version = ${version ?: '[none]'}"

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

springBoot {
    mainClass = 'org.squidmin.java.spring.gradle.bigquery.Java17SpringGradleBigQueryReferenceApplication'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudGcpVersion', "4.7.2")
    set('springCloudVersion', "2022.0.4")
}

dependencies {
    implementation 'org.springframework.cloud:spring-cloud-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.cloud:spring-cloud-context'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    implementation 'org.apache.commons:commons-lang3:3.12.0'

    implementation 'com.github.jknack:handlebars:4.3.1'

    implementation 'com.google.cloud:spring-cloud-gcp-starter'

    // BigQuery
    implementation platform('com.google.cloud:libraries-bom:26.11.0')
    implementation 'com.google.cloud:google-cloud-bigquery:2.24.2'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.projectlombok:lombok:1.18.28'

    // SnakeYAML
    implementation ('org.yaml:snakeyaml') {
        version {
            strictly "1.33"
        }
        because "patch CVE-2022-25857 brought in by snakeyaml."
    }

    testImplementation 'org.springframework:spring-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testCompileOnly 'org.projectlombok:lombok:1.18.28'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
}

dependencyManagement {
    imports {
        mavenBom "com.google.cloud:spring-cloud-gcp-dependencies:${springCloudGcpVersion}"
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()

    systemProperty 'spring.profiles.active', System.getProperty('PROFILE')
    systemProperty 'GCP_SA_KEY_PATH', System.getProperty('GCP_SA_KEY_PATH')
    systemProperty 'GCP_ADC_ACCESS_TOKEN', System.getProperty('GCP_ADC_ACCESS_TOKEN')
    systemProperty 'GCP_SA_ACCESS_TOKEN', System.getProperty('GCP_SA_ACCESS_TOKEN')
    systemProperty 'GCP_DEFAULT_USER_PROJECT_ID', System.getProperty('GCP_DEFAULT_USER_PROJECT_ID')
    systemProperty 'GCP_DEFAULT_USER_DATASET', System.getProperty('GCP_DEFAULT_USER_DATASET')
    systemProperty 'GCP_DEFAULT_USER_TABLE', System.getProperty('GCP_DEFAULT_USER_TABLE')
    systemProperty 'GCP_SA_PROJECT_ID', System.getProperty('GCP_SA_PROJECT_ID')
    systemProperty 'GCP_SA_DATASET', System.getProperty('GCP_SA_DATASET')
    systemProperty 'GCP_SA_TABLE', System.getProperty('GCP_SA_TABLE')

    systemProperty 'SCHEMA', System.getProperty('SCHEMA')

//    exclude '**/BigQueryServiceEndToEndTest.class'
//    exclude '**/ControllerTest.class'

    testLogging {
        showStandardStreams = true
        events 'passed', 'skipped', 'failed'
    }
}

tasks.named('bootRun') {
    systemProperty 'spring.profiles.active', System.getProperty('PROFILE')
    systemProperty 'GCP_SA_KEY_PATH', System.getProperty('GCP_SA_KEY_PATH')
    systemProperty 'GCP_ADC_ACCESS_TOKEN', System.getProperty('GCP_ADC_ACCESS_TOKEN')
    systemProperty 'GCP_SA_ACCESS_TOKEN', System.getProperty('GCP_SA_ACCESS_TOKEN')
    systemProperty 'GCP_DEFAULT_USER_PROJECT_ID', System.getProperty('GCP_DEFAULT_USER_PROJECT_ID')
    systemProperty 'GCP_SA_PROJECT_ID', System.getProperty('GCP_SA_PROJECT_ID')
    systemProperty 'GCP_DEFAULT_USER_DATASET', System.getProperty('GCP_DEFAULT_USER_DATASET')
    systemProperty 'GCP_SA_DATASET', System.getProperty('GCP_SA_DATASET')
    systemProperty 'GCP_DEFAULT_USER_TABLE', System.getProperty('GCP_DEFAULT_USER_TABLE')
    systemProperty 'GCP_SA_TABLE', System.getProperty('GCP_SA_TABLE')
}
